Attempt at fixing bug on Safari

--- a/frontend/public/tailwind.css
+++ b/frontend/public/tailwind.css
@@ -523,8 +523,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-top: 2.8rem;
 }
 
-.block {
-  display: block;
+.mt-8 {
+  margin-top: 2rem;
 }
 
 .flex {
@@ -537,10 +537,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .grid {
   display: grid;
-}
-
-.hidden {
-  display: none;
 }
 
 .h-full {
@@ -583,14 +579,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 3.5rem;
 }
 
-.h-2\/5 {
-  height: 40%;
-}
-
-.h-3\/5 {
-  height: 60%;
-}
-
 .h-1\/3 {
   height: 33.333333%;
 }
@@ -599,8 +587,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 66.666667%;
 }
 
-.h-0 {
-  height: 0px;
+.w-20 {
+  width: 5rem;
 }
 
 .w-full {
@@ -633,24 +621,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .w-10 {
   width: 2.5rem;
-}
-
-.w-max {
-  width: -webkit-max-content;
-  width: -moz-max-content;
-  width: max-content;
-}
-
-.w-20 {
-  width: 5rem;
-}
-
-.w-0 {
-  width: 0px;
-}
-
-.flex-initial {
-  flex: 0 1 auto;
 }
 
 .grow {
@@ -742,14 +712,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   scroll-snap-stop: always;
 }
 
-.list-disc {
-  list-style-type: disc;
-}
-
-.grid-cols-3 {
-  grid-template-columns: repeat(3, minmax(0, 1fr));
-}
-
 .flex-row {
   flex-direction: row;
 }
@@ -794,10 +756,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   overflow: scroll;
 }
 
-.overflow-y-auto {
-  overflow-y: auto;
-}
-
 .overflow-x-hidden {
   overflow-x: hidden;
 }
@@ -812,6 +770,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .rounded-md {
   border-radius: 0.375rem;
+}
+
+.rounded-full {
+  border-radius: 9999px;
 }
 
 .border-2 {
@@ -848,6 +810,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-color: rgb(244 63 94 / var(--tw-bg-opacity));
 }
 
+.bg-blue-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(30 58 138 / var(--tw-bg-opacity));
+}
+
 .bg-gradient-to-b {
   background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
 }
@@ -880,6 +847,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding: 0px;
 }
 
+.p-2 {
+  padding: 0.5rem;
+}
+
 .px-5 {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
@@ -890,9 +861,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-right: 2rem;
 }
 
-.px-3 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
 }
 
 .px-20 {
@@ -900,9 +871,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-right: 5rem;
 }
 
-.px-10 {
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
+.pr-6 {
+  padding-right: 1.5rem;
 }
 
 .pb-36 {
@@ -929,20 +899,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-right: 1.25rem;
 }
 
-.pt-48 {
-  padding-top: 12rem;
-}
-
 .pt-10 {
   padding-top: 2.5rem;
-}
-
-.pr-6 {
-  padding-right: 1.5rem;
-}
-
-.text-left {
-  text-align: left;
 }
 
 .text-center {
@@ -954,14 +912,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   line-height: 1;
 }
 
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem;
-}
-
-.text-6xl {
-  font-size: 3.75rem;
-  line-height: 1;
 }
 
 .text-lg {
@@ -979,11 +937,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   line-height: 2.5rem;
 }
 
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-
 .text-7xl {
   font-size: 4.5rem;
   line-height: 1;
@@ -997,9 +950,19 @@ Ensure the default browser behavior of the `hidden` attribute.
   font-weight: 200;
 }
 
+.text-blue-900 {
+  --tw-text-opacity: 1;
+  color: rgb(30 58 138 / var(--tw-text-opacity));
+}
+
 .text-black {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.text-bgwhite {
+  --tw-text-opacity: 1;
+  color: rgb(241 241 241 / var(--tw-text-opacity));
 }
 
 .text-white {
@@ -1019,16 +982,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .text-transparent {
   color: transparent;
-}
-
-.text-blue-900 {
-  --tw-text-opacity: 1;
-  color: rgb(30 58 138 / var(--tw-text-opacity));
-}
-
-.text-bgwhite {
-  --tw-text-opacity: 1;
-  color: rgb(241 241 241 / var(--tw-text-opacity));
 }
 
 .underline {
@@ -1057,16 +1010,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   filter: var(--tw-filter);
 }
 
-.duration-700 {
-  transition-duration: 700ms;
-}
-
-.duration-200 {
-  transition-duration: 200ms;
-}
-
 .duration-1000 {
   transition-duration: 1000ms;
+}
+
+.duration-700 {
+  transition-duration: 700ms;
 }
 
 #hideMe {
@@ -1093,26 +1042,6 @@ Ensure the default browser behavior of the `hidden` attribute.
     height: 0;
     visibility: visible;
   }
-}
-
-.scrollbar::-webkit-scrollbar {
-  width: 12px;
-  height: 20px;
-}
-
-.scrollbar::-webkit-scrollbar-track {
-  border-radius: 100vh;
-  background: #000000;
-}
-
-.scrollbar::-webkit-scrollbar-thumb {
-  background: #000000;
-  border-radius: 100vh;
-  border: 2px solid #f6f7ed;
-}
-
-.scrollbar::-webkit-scrollbar-thumb:hover {
-  background: #ff0000;
 }
 
 .no-scrollbar::-webkit-scrollbar {
@@ -1289,6 +1218,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   .sm\:h-96 {
     height: 24rem;
   }
+
+  .sm\:text-6xl {
+    font-size: 3.75rem;
+    line-height: 1;
+  }
 }
 
 @media (min-width: 768px) {
@@ -1324,6 +1258,10 @@ Ensure the default browser behavior of the `hidden` attribute.
     height: 3.5rem;
   }
 
+  .md\:w-36 {
+    width: 9rem;
+  }
+
   .md\:w-1\/3 {
     width: 33.333333%;
   }
@@ -1340,10 +1278,6 @@ Ensure the default browser behavior of the `hidden` attribute.
     width: 24rem;
   }
 
-  .md\:w-36 {
-    width: 9rem;
-  }
-
   .md\:flex-row {
     flex-direction: row;
   }
@@ -1352,46 +1286,27 @@ Ensure the default browser behavior of the `hidden` attribute.
     justify-content: center;
   }
 
-  .md\:pl-16 {
-    padding-left: 4rem;
+  .md\:px-0 {
+    padding-left: 0px;
+    padding-right: 0px;
   }
 
-  .md\:pt-8 {
-    padding-top: 2rem;
+  .md\:pl-16 {
+    padding-left: 4rem;
   }
 
   .md\:text-left {
     text-align: left;
   }
 
-  .md\:text-8xl {
-    font-size: 6rem;
+  .md\:text-6xl {
+    font-size: 3.75rem;
     line-height: 1;
-  }
-
-  .md\:text-5xl {
-    font-size: 3rem;
-    line-height: 1;
-  }
-
-  .md\:text-2xl {
-    font-size: 1.5rem;
-    line-height: 2rem;
   }
 
   .md\:text-3xl {
     font-size: 1.875rem;
     line-height: 2.25rem;
-  }
-
-  .md\:text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
-  }
-
-  .md\:text-6xl {
-    font-size: 3.75rem;
-    line-height: 1;
   }
 }
 
